--- a/assets/style.css
+++ b/assets/style.css
@@ -296,8 +296,10 @@ header{
   border:0.5px solid black;
 }
 .switch-view{
+  margin-top: 20px;
   back-drop-filter:blur(20px);
   padding: 2px;
+  width: 100PX;
   width:auto;
   height: fit-content;
   border:0.5px solid black;
