--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -43,9 +43,9 @@
           </div>
       </form>
       <div class="nav-info">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>Description</div>
+        <div>Size</div>
+        <div>Condition</div>
       </div>
       <div class="information">
           <div class="project_info">
