--- a/assets/style.css
+++ b/assets/style.css
@@ -335,6 +335,7 @@ header{
   justify-content: space-between;
 }
 .baggie{
+  width: 100%;
   padding: 2px;
 }
 #cart .cart-total{
@@ -430,8 +431,6 @@ span.box {
 }
 /* PRODUCT PAGE
 ================================================== */
-
-
 #single-product{
   padding: 12px 20px 0px 20px;
   grid-gap:12px;
@@ -445,13 +444,20 @@ span.box {
   top: 100px;
   height: fit-content;
 }
+.nav-info{
+  border-left: 0.5px solid black;
+  border-top: 0.5px solid black;
+  border-right: 0.5px solid black;
+}
+.nav-info>div{
+  border-bottom: 0.5px solid black;
+}
 .gallery{
   display: grid;
   row-gap:12px;
   grid-column: span 6;
 }
 .gallery .thumb{
-  
 }
 div#related {
   grid-column: span 3;
