--- a/assets/style.css
+++ b/assets/style.css
@@ -450,6 +450,7 @@ span.box {
   border-right: 0.5px solid black;
 }
 .nav-info>div{
+  padding: 2px;
   text-align: center;
   border-bottom: 0.5px solid black;
 }
