--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -73,6 +73,11 @@
     </div>
     {% include 'related' %}
 </div>
+<style>
+  .switch-view{
+    display: none;
+  }
+</style>
 <!-- {% assign variants = 0 %}
 {% for option in product.options %}
 {% if product.options.first != 'Title' %}
