--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -41,15 +41,15 @@
           class="product-variants"
           {%- endif -%}>
           <div id="bag">
-              <div class="title">
+              <!-- <div class="title">
                 <div>{{ product.title }}</div>
                 {% unless product.metafields.descriptors.subtitle == blank %}
                   <div class="subtitle">
                       {{ product.metafields.descriptors.subtitle }}
                   </div>
                 {% endunless %}
-  			      </div>
-              <div id="product-price"></div>
+  			      </div> -->
+              <!-- <div id="product-price"></div> -->
               {% if product.compare_at_price > product.price %}
                   <span class="sale">On sale</span>
               {% else %}
