--- a/assets/style.css
+++ b/assets/style.css
@@ -449,10 +449,10 @@ span.box {
   border-top: 0.5px solid black;
   border-right: 0.5px solid black;
 }
-.nav-info>div{
+.nav-info>div {
   padding: 2px;
-  text-align: center;
   border-bottom: 0.5px solid black;
+  padding-left: 5px!important;
 }
 .gallery{
   display: grid;
