--- a/assets/style.css
+++ b/assets/style.css
@@ -459,7 +459,8 @@ span.box {
   row-gap:12px;
   grid-column: span 6;
 }
-.gallery .thumb{
+.gallery .thumb:hover{
+  border: 0.5px solid black;
 }
 div#related {
   grid-column: span 3;
