--- a/assets/style.css
+++ b/assets/style.css
@@ -460,6 +460,9 @@ span.box {
   grid-column: span 6;
 }
 .gallery .thumb:hover{
+  border: 0.5px solid transparent;
+}
+.gallery .thumb:hover{
   border: 0.5px solid black;
 }
 div#related {
