--- a/assets/style.css
+++ b/assets/style.css
@@ -459,7 +459,7 @@ span.box {
   row-gap:12px;
   grid-column: span 6;
 }
-.gallery .thumb:hover{
+.gallery .thumb{
   border: 0.5px solid transparent;
 }
 .gallery .thumb:hover{
