--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -114,6 +114,17 @@
   .switch-view{
     display: none;
   }
+  .product_info:hover .main-information {
+    border-top: 0.5px solid var(--black);
+    border-right: 0.5px solid var(--black);
+    border-left: 0.5px solid var(--black);
+  }
+  .product_info:hover .info-product {
+    border-bottom: 0.5px solid var(--black);
+  }
+  .product_info:hover .info-product>div:nth-child(even) {
+    border-left: 0.5px solid var(--black);
+  }
 </style>
 <!-- {% assign variants = 0 %}
 {% for option in product.options %}
