--- a/assets/style.css
+++ b/assets/style.css
@@ -445,6 +445,7 @@ span.box {
   height: fit-content;
 }
 .nav-info{
+  margin-top: 12px;
   border-left: 0.5px solid black;
   border-top: 0.5px solid black;
   border-right: 0.5px solid black;
