--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -114,15 +114,15 @@
   .switch-view{
     display: none;
   }
-  .main-information {
+  #single-product .main-information {
     border-top: 0px solid var(--black);
     border-right: 0.5px solid var(--black);
     border-left: 0.5px solid var(--black);
   }
- .info-product {
+  #single-product .info-product {
     border-bottom: 0.5px solid var(--black);
   }
-  .info-product>div:nth-child(even) {
+  #single-product .info-product>div:nth-child(even) {
     border-left: 0.5px solid var(--black);
   }
 </style>
