--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -114,12 +114,12 @@
   .switch-view{
     display: none;
   }
-  #single-product .main-information {
+    #single-product .main-information {
     border-top: 0px solid var(--black);
     border-right: 0.5px solid var(--black);
     border-left: 0.5px solid var(--black);
   }
-  #single-product .info-product {
+    #single-product .product_info:hover .info-product {
     border-bottom: 0.5px solid var(--black);
   }
   #single-product .info-product>div:nth-child(even) {
