--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -114,15 +114,15 @@
   .switch-view{
     display: none;
   }
-  .product_info .main-information {
-    border-top: 0.5px solid var(--black);
+  .product_info .main-information .main-information {
+    border-top: 0px solid var(--black);
     border-right: 0.5px solid var(--black);
     border-left: 0.5px solid var(--black);
   }
-  .product_info .product_info:hover .info-product {
+  .product_info .main-information .product_info:hover .info-product {
     border-bottom: 0.5px solid var(--black);
   }
-  .product_info .info-product>div:nth-child(even) {
+  .product_info .main-information .info-product>div:nth-child(even) {
     border-left: 0.5px solid var(--black);
   }
 </style>
