--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -25,11 +25,11 @@
                <div class="sale">Out of stock</div>
               {% endif %}
               <div class="variations">
-                          <select id="product-select" name="id">
+                          <!-- <select id="product-select" name="id">
                             {% for variant in product.variants %}
                             <option value="{{ variant.id }}">CHOOSE SIZE:</option>
                             {% endfor %}
-                          </select>
+                          </select> -->
                           {% if product.available %}
                               <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
                           {% else %}
@@ -158,17 +158,17 @@
     }
   };
 
-  jQuery(function($) {
-    new Shopify.OptionSelectors('product-select', {
-      product: {{ product | json }},
-      onVariantSelected: selectCallback
-    });
-    {% assign count = -1 %}
-    {% for option in product.options %}
-    {% if product.options.first != 'Title' %}
-      {% assign count = count | plus: 1 %}
-      $("#product-select-option-{{ count }}").prepend("<option value='' disabled selected>{{ product.options[count] | upcase }}</option>");
-    {% endif %}
-    {% endfor %}
-  });
+  // jQuery(function($) {
+  //   new Shopify.OptionSelectors('product-select', {
+  //     product: {{ product | json }},
+  //     onVariantSelected: selectCallback
+  //   });
+  //   {% assign count = -1 %}
+  //   {% for option in product.options %}
+  //   {% if product.options.first != 'Title' %}
+  //     {% assign count = count | plus: 1 %}
+  //     $("#product-select-option-{{ count }}").prepend("<option value='' disabled selected>{{ product.options[count] | upcase }}</option>");
+  //   {% endif %}
+  //   {% endfor %}
+  // });
 </script>
