--- a/assets/style.css
+++ b/assets/style.css
@@ -247,7 +247,7 @@ header{
   position: sticky;
   grid-template-columns: repeat(12, 1fr);
   display: grid;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 20px 20px;
   grid-gap:12px;
 }
 .logo{
@@ -441,7 +441,7 @@ span.box {
 .product_info{
   grid-column: span 3;
   position: sticky;
-  top: 100px;
+  top: var(--m);
   display: grid!important;
   row-gap:12px;
   height: fit-content;
@@ -476,7 +476,7 @@ div#related >.product{
 div#related >.product:first-child{
   display: grid!important;
   position: sticky;
-  top: 100px;
+  top: var(--m);;
 }
 .addtocart{
   border:0.5px solid var(--black);
