--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,5 +1,5 @@
 <div id="main-collection" class="main">
-    {% for product in collection.products limit:  4 %}
+    {% for product in collection.products %}
          {% include 'product-body' %}
     {% endfor %}
 </div>
