--- a/snippets/product-body-random.liquid
+++ b/snippets/product-body-random.liquid
@@ -1,9 +1,13 @@
 <!--Product-random-index-->
-<div class="product">
-    <a class="thumbnail" href="{{ product.url }}">
-    <span class="box"></span>
-    <img class="lazy" src="{{ product.images[0] | product_img_url: 'thumb' }}" data-src="{{ product.images[0] | product_img_url: 'master' }}" alt="{{ product.title }}" /></a>
+<div class="swiper">
+  <div class="swiper-wrapper">
+      <div class="swiper-slide">
+          <a class="thumbnail" href="{{ product.url }}">
+          <span class="box"></span>
+          <img class="lazy" src="{{ product.images[0] | product_img_url: 'thumb' }}" data-src="{{ product.images[0] | product_img_url: 'master' }}" alt="{{ product.title }}" /></a>
+        </div>
   </div>
+</div>
 {%- if template contains 'product' or template contains 'collection' -%}
   {{ 'global-product.js' | asset_url | script_tag }}
 {%- endif -%}
