--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,5 +1,9 @@
-{%- for product in collections.all.products -%}
-  {%- if product.id != current_product and product.available -%}
-    {% include 'product-body-random' %}
-  {%- endif -%}
-{%- endfor -%}
+<div class="swiper">
+  <div class="swiper-wrapper">
+    {%- for product in collections.all.products -%}
+      {%- if product.id != current_product and product.available -%}
+        {% include 'product-body-random' %}
+      {%- endif -%}
+    {%- endfor -%}
+  </div>
+</div>
