--- a/assets/style.css
+++ b/assets/style.css
@@ -431,9 +431,31 @@ span.box {
 }
 /* RANNDMON PAGE
 ================================================== */
-.swiper-wrapper{
+.swiper {
+    display: flex;
+    width: 100vw;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    z-index: 1;
 }
-.swiper-slide{
+.swiper-wrapper {
+    width: fit-content;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+}
+.swiper-slide {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
 }
 .thumbnail-randmon{
   height: 20vh;
