--- a/assets/style.css
+++ b/assets/style.css
@@ -296,6 +296,7 @@ header{
   border:0.5px solid black;
 }
 .switch-view{
+  display: none;
   margin-top: 20px;
   back-drop-filter:blur(20px);
   padding: 2px;
