--- a/assets/style.css
+++ b/assets/style.css
@@ -444,11 +444,22 @@ span.box {
     box-sizing: content-box;
 }
 .swiper-slide {
-    flex-shrink: 0;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transition-property: transform;
+	/* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+	    background-repeat: no-repeat;
+	    background-position: center;
+	    background-size: contain;
 }
 .thumbnail-randmon{
 }
