--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,4 +1,4 @@
-<div clas="container-fixed">
+<div class="container-fixed">
     <div class="swiper">
       <div class="swiper-wrapper">
         {%- for product in collections.all.products -%}
