--- a/assets/style.css
+++ b/assets/style.css
@@ -254,6 +254,7 @@ header{
   grid-column: span 3;
 }
 .logo svg{
+  height: fit-content;
   display: block;
   width: 100%;
   fill:var(--black)!important;
