--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -142,7 +142,7 @@ fernandoepeso.info
     </div>
     <div class="cart-part">
         <div id="cart">
-          <div class="baggie">
+          <div class="baggie hov">
               <a {% if template == 'cart' %}  style="color:green;" {% endif %} href="/cart">Cart</a>
           </div>
           <div class="cart-total">
