--- a/assets/style.css
+++ b/assets/style.css
@@ -327,6 +327,7 @@ header{
   padding-left: 5px!important;
   border-bottom:0.5px solid black;
   padding: 2px;
+  cursor: pointer;
   width: 100%;
 }
 .dropdown>div:hover{
