--- a/assets/style.css
+++ b/assets/style.css
@@ -557,7 +557,9 @@ div#related >.product:first-child{
   top: var(--m);;
 }
 .addtocart{
-  border:0.5px solid var(--black);
+  background-color: var(--black);
+  color: var(--white);
+  border: 0.5px solid var(--black);
   padding: 2px 5px 2px 5px;
 }
 }
