--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -168,6 +168,7 @@ fernandoepeso.info
     {% for link in linklists.footer.links %}
     <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
     {% endfor %}
+    <div>All rights reserved. Marchive 2023</div>
   </footer>
   {%- if template contains 'product' -%}
     {{ 'global-product.js' | asset_url | script_tag }}
