--- a/assets/style.css
+++ b/assets/style.css
@@ -216,6 +216,7 @@ a{
 /* MAIN
 ================================================== */
 footer{
+  margin-top: 12px;
   position: relative;
   bottom: 40px;
   height: 200px;
