--- a/assets/style.css
+++ b/assets/style.css
@@ -585,8 +585,6 @@ grid-template-columns:repeat(12, 1fr);
 align-items: end;
 }
 .nav-footer{
-
-
 }
 /* PAGE DEFAULT
 ================================================== */
@@ -601,6 +599,14 @@ align-items: end;
   padding:20px;
   display: grid;
   grid-template-columns: repeat(12,1fr);
+}
+.credits {
+    bottom: 20px;
+    text-align: right;
+    right: 20px;
+    width: 100vw;
+    position: fixed;
+    color: grey;
 }
 /* ABOUT
 ================================================== */
