--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -159,7 +159,8 @@ fernandoepeso.info
     </div>
     <div class="credits">
       All rights reserved. Marchive 2023<br>
-      WWW by <a href="https://www.fernandoespeso.info/">Fernando Espeso</a>
+      website by <a href="https://www.fernandoespeso.info/">Fernando Espeso</a><br>
+      Art direction by studio Metodica
     </div>
   </footer>
   {%- if template contains 'product' -%}
