--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -159,7 +159,7 @@ fernandoepeso.info
     </div>
     <div class="credits">
       All rights reserved. Marchive 2023<br>
-      <span>website by <a href="https://www.fernandoespeso.info/">Fernando Espeso</a></span><br>
+      <span>website by <a style="display:inline;" href="https://www.fernandoespeso.info/">Fernando Espeso</a></span><br>
       Art direction by studio Metodica
     </div>
   </footer>
