--- a/assets/style.css
+++ b/assets/style.css
@@ -143,6 +143,17 @@ button:disabled,
 select:disabled{
   opacity: 1;
 }
+
+footer{
+  margin-top: 12px;
+  position: relative;
+  bottom: 0px;
+  height: 200px;
+  background-color:var(--black);
+  color: var(--white);
+  padding: 20px!important;
+  width: 100%;
+}
 /* FONTS
 ================================================== */
 @font-face {
