--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,9 @@ button:disabled,
 select:disabled{
   opacity: 1;
 }
-
+footer {
+  margin-left: 20px;
+}
 footer{
   margin-top: 12px;
   position: relative;
