--- a/assets/style.css
+++ b/assets/style.css
@@ -562,7 +562,7 @@ footer{
   margin-top: 12px;
   position: relative;
   bottom: 0px;
-  height: 200px;
+  height: auto;
   background-color:var(--black);
   color: var(--white);
   padding: 20px!important;
@@ -683,18 +683,6 @@ div#related {
 ================================================== */
 /* COLLECTION
 ================================================== */
-.collecion_information {
-    grid-column: span 12;
-    padding: 20px;
-    margin-top: 100px;
-}
-.item_img {
-    grid-column: span 3;
-}
-.credits_collection {
-  padding:20px;
-    grid-column: span 9;
-}
 /* IMAGE
 ================================================== */
 /* VIDEO
