--- a/assets/style.css
+++ b/assets/style.css
@@ -297,9 +297,8 @@ header{
 }
 .switch-view{
   margin-top: 20px;
-  back-drop-filter:blur(20px);
   padding: 2px;
-  width:auto;
+  grid-column: span 1;
   height: fit-content;
   border:0.5px solid black;
 }
