--- a/assets/style.css
+++ b/assets/style.css
@@ -297,7 +297,7 @@ header{
 }
 .switch-view{
   padding: 2px;
-  grid-column: span 1;
+  grid-column:1/span 1;
   height: fit-content;
   border:0.5px solid black;
 }
