--- a/assets/style.css
+++ b/assets/style.css
@@ -296,7 +296,7 @@ header{
   border:0.5px solid black;
 }
 .switch-view{
-  padding: 2px;
+  padding: 2px 2px 2px 5px;
   grid-column:1/span 1;
   height: fit-content;
   border:0.5px solid black;
