--- a/assets/style.css
+++ b/assets/style.css
@@ -230,6 +230,18 @@ a{
 #products.dropped{
     grid-template-columns: repeat(16,1fr);
 }
+
+#products.dropped .product .main-information {
+  border-top: 0.5px solid var(--black);
+  border-right: 0.5px solid var(--black);
+  border-left: 0.5px solid var(--black);
+}
+#products.dropped .product .info-product {
+  border-bottom: 0.5px solid var(--black);
+}
+#products.dropped .product .info-product>div:nth-child(even) {
+  border-left: 0.5px solid var(--black);
+}
 .product.active-size,
 .product.active-color{
   display: none;
